kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pcf-registry
  labels:
    name: pcf-registry
