kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pcf-registry-ingress
  namespace: pcf-registry
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  rules:
    - host: pcf-registry.local
    - http:

        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pcf-registry-service
                port:
                  number: 80
